# pyinsole

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ROADMAP.md  pyproject.toml  ruff_defaults.toml
.github/workflows/: release.yml  test.yml
src/pyinsole/: __init__.py  _compat.py  compat.py  dispatchers.py  exceptions.py  handlers.py  managers.py  providers.py  routes.py  runners.py  translators.py  types.py  utils.py
src/pyinsole/ext/: sentry.py
src/pyinsole/ext/aws/: __init__.py  providers.py  routes.py  translators.py
src/pyinsole/ext/handlers/: __init__.py  handlers.py
src/pyinsole/ext/sentry/: __init__.py  sentry.py
tests/: conftest.py  test_dispatchers.py  test_managers.py  test_routes.py  test_runners.py  test_utils.py
tests/ext/: test_providers.py  test_sentry.py
tests/src/pyinsole/: test_dispatchers.py  test_managers.py  test_routes.py  test_runners.py  test_utils.py
tests/src/pyinsole/ext/: conftest.py  test_base.py  test_providers.py  test_routes.py
