[tool.poetry]
name = "pyinsole"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.11"
aiobotocore = "^2.15.2"
sentry-sdk = "^2.17.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-deadfixtures = "^2.2.1"
pytest-envvars = "^1.2.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv --cov-report=term-missing --cov=src/pyinsole --cov-branch"
asyncio_mode = "strict"
pytestenvvars__env_files = [".env"]

[tool.coverage.report]
omit = [
    "*/__init__.py"
]

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 110
known_first_party = []
known_local_folder = ["tests", "bank_queue_processing_service"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
